--- a/app/src/market_data_subscription/CMakeLists.txt
+++ b/app/src/market_data_subscription/CMakeLists.txt
@@ -2,4 +2,6 @@ set(NAME market_data_subscription)
 project(${NAME})
 add_compile_definitions(CCAPI_ENABLE_SERVICE_MARKET_DATA)
 add_compile_definitions(CCAPI_ENABLE_EXCHANGE_COINBASE)
+add_compile_definitions(CCAPI_ENABLE_EXCHANGE_BINANCE)
+
 add_executable(${NAME} main.cpp)
