--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,15 +1,12 @@
 [package]
-name = "ccapi-type-rs"
+name = "ccapi-rs"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-autocxx = "0.22.3"
-cxx = "1.0.72"
-openssl-sys = { version = "0.9.75", features = ["vendored"] }
+cxx = "1"
 
 [build-dependencies]
-autocxx-build = "0.22.3"
-miette = { version = "5.1.1", features = ["fancy"] }
+cxx-build = "1"
